# pyTyping

./: .gitignore  README.md
annotation/: README.md  pyproject.toml
annotation/src/annotation/: aliases.py  aliases_references.py  classes.py  containers.py  disable_pylint_warnings.py  enumeration.py  functions.py  immutable.py  iterators.py  namedtuple.py  primitives.py  recursive_type_annotation.py  type_var.py
annotation/src/classes/: properties.py
annotation/tests/: test_annotation.py
strictness/: pyproject.toml
strictness/strictness/: strict_modules.py
strictness/tests/: test_strictness.py
