[tool.poetry]
name = "annotation"
version = "0.1.0"
description = ""
authors = ["Wei Ning <macgnw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.770"
yapf = "^0.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
